src/rules/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT016.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    FailWithoutMessage: ~
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 15
  fix: ~
  parent: ~
- kind:
    FailWithoutMessage: ~
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 15
  fix: ~
  parent: ~
- kind:
    FailWithoutMessage: ~
  location:
    row: 15
    column: 4
  end_location:
    row: 15
    column: 15
  fix: ~
  parent: ~
- kind:
    FailWithoutMessage: ~
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 15
  fix: ~
  parent: ~
- kind:
    FailWithoutMessage: ~
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 15
  fix: ~
  parent: ~

