src/rules/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT019.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    FixtureParamWithoutValue: _fixture
  location:
    row: 9
    column: 13
  end_location:
    row: 9
    column: 21
  fix: ~
  parent: ~
- kind:
    FixtureParamWithoutValue: _fixture
  location:
    row: 13
    column: 16
  end_location:
    row: 13
    column: 24
  fix: ~
  parent: ~

